--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         },
         {
             "name": "Pavel Vasin",
-            "email": "phacman@yandex.ru",
-            "homepage": "https://phacman.ru"
+            "email": "phacman@yandex.ru"
         }
     ],
     "scripts": {
